...
import com.artemklymenko.search.domain.model.RecipeDomain
import com.artemklymenko.search.ui.R
import com.artemklymenko.search.ui.components.ExpandableText
import kotlinx.coroutines.flow.collectLatest

object FavouriteScreenTestTag {
    const val LAZY_COL = "lazy_col"
    const val DROP_DOWN = "drop_down"
    const val ALPHABETICAL = "alphabetical"
    const val LESS_INGREDIENT = "less_ingredient"
    const val RESET = "reset"
    const val DELETE = "delete"
}

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun FavouriteScreen(
    viewModel: FavouriteViewModel,
...
