...
import com.artemklymenko.search.domain.model.RecipeDetailsDomain
import com.artemklymenko.search.ui.R
import com.artemklymenko.search.ui.components.ExpandableText
import kotlinx.coroutines.flow.collectLatest

object RecipeDetailScreenTestTag {
    const val INSERT = "insert"
    const val DELETE = "delete"
    const val ARROW_BACK = "arrow_back"
}

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun RecipeDetailScreen(
    viewModel: RecipeDetailViewModel,
...
