...
import com.artemklymenko.search.domain.model.RecipeDomain
import com.artemklymenko.search.ui.R
import com.artemklymenko.search.ui.components.ExpandableText
import kotlinx.coroutines.flow.collectLatest

object RecipeListScreenTag {
    const val SEARCH = "search"
    const val LAZY_COL = "lazy_col"
    const val FLOATING_ACTION_BTN = "fab"
}

@Composable
fun RecipeListScreen(
    viewModel: RecipeListViewModel,
    navHostController: NavHostController,
...
